@@ -1,3 +1,3 @@
 #compdef ardj
 # generated by ardj --zsh
-_arguments "1:Select command:((add-incoming-tracks\:'moves tracks from the incoming folder to the database' config\:'edit settings' console\:'opens a console for jabber commands' db-console\:'opens the database console' db-init\:'initializes the database' db-purge\:'deletes dead data from the database' db-stats\:'shows database statistics' download-artist\:'downloads songs by an artist (immediately)' download-artist-schedule\:'queues retrieving more tracks by the specified artists' export-total-listeners\:'prints overall listening statistics to stdout (CSV)' export-yesterday-listeners\:'prints yesterday\`s listening statistics to stdout (CSV)' find-new-tracks\:'adds new songs from Last.fm' fix-artist-names\:'correct names according to Last.fm' help\:'shows this help screen' jabber\:'run the jabber bot with a process monitor' jabber-child\:'run the jabber bot' lastfm-find-tags\:'Adds lastfm:* tags to tracks that don\`t have them.' lastfm-track-tags\:'show track tags from last.fm' map-listeners\:'updates the listeners map' mark-hitlist\:'marks best tracks with the \"hitlist\" tag' mark-liked-by\:'applies a label to tracks liked by all specified jids' mark-long\:'marks long tracks with the \"long\" label' mark-orphans\:'marks tracks that don\`t belong to a playlist with the \"orphan\" label' mark-recent\:'marks 100 recently added tracks with the \"recent\" label' merge-votes\:'merge votes according to jabber aliases' play\:'sets urgent playlist for next hour' print-next-track\:'names a file to play next' queue-flush\:'delete everything from the queue' say\:'renders text to voice using festival, then plays it' scan-replaygain\:'calculate ReplayGain for tracks that don\`t have it' serve\:'start the web server' show-news-from-jamendo\:'show new tracks available at jamendo.com' tags\:'display tags from files' twit\:'sends a message to twitter' twit-replies\:'shows replies to your account' twit-replies-speak\:'render replies using festival and queue for playing' update-schedule\:'looks for events in the Last.fm database' update-track-lengths\:'update track lengths from files (maintenance)' update-track-weights\:'shift current weights to real weights' xmpp-send\:'send a Jabber message'))"
+_arguments "1:Select command:((add-incoming-tracks\:'moves tracks from the incoming folder to the database' config\:'edit settings' console\:'opens a console for jabber commands' db-console\:'opens the database console' db-init\:'initializes the database' db-purge\:'deletes dead data from the database' db-stats\:'shows database statistics' download-artist\:'downloads songs by an artist (immediately)' download-artist-schedule\:'queues retrieving more tracks by the specified artists' dump-votes\:'dumps votes statistics' export-total-listeners\:'prints overall listening statistics to stdout (CSV)' export-yesterday-listeners\:'prints yesterday\`s listening statistics to stdout (CSV)' find-new-tracks\:'adds new songs from Last.fm' fix-artist-names\:'correct names according to Last.fm' help\:'shows this help screen' jabber\:'run the jabber bot with a process monitor' jabber-child\:'run the jabber bot' lastfm-find-tags\:'Adds lastfm:* tags to tracks that don\`t have them.' lastfm-track-tags\:'show track tags from last.fm' map-listeners\:'updates the listeners map' mark-hitlist\:'marks best tracks with the \"hitlist\" tag' mark-liked-by\:'applies a label to tracks liked by all specified jids' mark-long\:'marks long tracks with the \"long\" label' mark-orphans\:'marks tracks that don\`t belong to a playlist with the \"orphan\" label' mark-recent\:'marks 100 recently added tracks with the \"recent\" label' merge-votes\:'merge votes according to jabber aliases' play\:'sets urgent playlist for next hour' print-next-track\:'names a file to play next' queue-flush\:'delete everything from the queue' say\:'renders text to voice using festival, then plays it' scan-replaygain\:'calculate ReplayGain for tracks that don\`t have it' serve\:'start the web server' show-news-from-jamendo\:'show new tracks available at jamendo.com' tags\:'display tags from files' twit\:'sends a message to twitter' twit-replies\:'shows replies to your account' twit-replies-speak\:'render replies using festival and queue for playing' update-schedule\:'looks for events in the Last.fm database' update-track-lengths\:'update track lengths from files (maintenance)' update-track-weights\:'shift current weights to real weights' xmpp-send\:'send a Jabber message'))"
