@@ -23,5 +23,6 @@
  - Added nice -n15 to the downloaded music processor.
  - Added more methods to the Python track API.
  - Added a way to share tracks without external URL info.
+ - Added a CLI command to dump daily/hourly vote stats.
  - Removed old commands: hotline, icelog, listeners, mail (CLI).
  - Changed tags order in tags/show: subtags go last.
